objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Actual_GDC__c</fullName>
        <description>Actual GDC</description>
        <label>Actual GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advisor_Transition_Date__c</fullName>
        <description>The date the contact transitioned to type: Advisor.</description>
        <inlineHelpText>The date the contact transitioned to type: Advisor.</inlineHelpText>
        <label>Advisor Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>LFA/SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anticipated_GDC__c</fullName>
        <label>Anticipated GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Under_Management__c</fullName>
        <description>Assets Under Management</description>
        <label>Assets Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrokerDealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Account)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokerLinc_Executed_Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrokerLinc Executed Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrokerLinc_IGO_Contracting_Received__c</fullName>
        <label>BrokerLinc IGO Contracting Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerLinc_OnBoarding_Webinar_Complete__c</fullName>
        <label>BrokerLinc OnBoarding Webinar Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerLinc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrokerLinc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Dealer_Category__c</fullName>
        <formula>IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Bank&apos;) , &apos;Bank&apos;,

IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Regional&apos;), &apos;Regional&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Independent B/D&apos;),&apos;Independent B/D&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Insurance - Career&apos;) , &apos;Insurance - Career&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Insurance - Independent&apos;) , &apos;Insurance - Independent&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Wire - National&apos;) , &apos;Wire - National&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Wire - Regional&apos;) , &apos;Wire - Regional&apos;,
IF(ISPICKVAL(Broker_Dealer__r.Broker_Dealer_Category__c, &apos;Other&apos;) , &apos;Other&apos;,&apos;-&apos;)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Dealer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Dealer_Revenue_Source__c</fullName>
        <label>Broker/Dealer Revenue Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Dealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Broker/Dealer</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only Broker/Dealer account can be selected</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker/Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRD_Number__c</fullName>
        <externalId>true</externalId>
        <label>CRD #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certifications_Section__c</fullName>
        <label>Certifications Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm_Package_Appr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearing Firm Package Appr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm_Package_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearing Firm Package Req.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm__c</fullName>
        <label>Clearing Firm</label>
        <picklist>
            <picklistValues>
                <fullName>NFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pershing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cohort_Sub_Type__c</fullName>
        <label>Cohort Sub-Type</label>
        <picklist>
            <controllingField>Cohort_Type__c</controllingField>
            <picklistValues>
                <fullName>Asset Gatherers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Planners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cohort_Type__c</fullName>
        <label>Cohort Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investment Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>Contact_Temperature__c  &amp;  &quot; - &quot; &amp;    TEXT(ROUND(Recruitment_Probability__c*100,2)) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Temperature__c</fullName>
        <formula>IF(OR(Do_not_Solicit__c , Closed_Date__c !=Null) , &apos;Closed&apos;, 
IF(Recruitment_Probability__c &gt; 0.9, &apos;Advisor&apos;, 
IF(Recruitment_Probability__c &gt;= 0.7, &apos;Hot&apos;, 
IF(Recruitment_Probability__c &gt;= 0.45, &apos;Warm&apos;, 
&apos;Cold&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Temperature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type_Old__c</fullName>
        <formula>IF(Do_not_Solicit__c, &apos;Dead&apos;, 
IF(Recruitment_Probability__c &gt; 0.90, &apos;Advisor&apos;, 
IF(Recruitment_Probability__c &gt;= 0.45, &apos;Prospect&apos;, 
&apos;Lead&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <controllingField>Affiliation__c</controllingField>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life-Brokerage Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS ABGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABGA - Life Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Life Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_TFR_Send_to_FP__c</fullName>
        <label>Date TFR Send to FP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_as_Hot__c</fullName>
        <description>The number of days as temperature: Hot.</description>
        <formula>TODAY() - Hot_Transition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days as temperature: Hot.</inlineHelpText>
        <label># Days as Hot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Prospect__c</fullName>
        <description>The number of days as type: Prospect.</description>
        <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days as type: Prospect.</inlineHelpText>
        <label># Days as Prospect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Prospect_until_App_Submitted__c</fullName>
        <description>The number of days as a Prospect until the Preliminary App Received.</description>
        <formula>Preliminary_App_Received__c - Prospect_Transition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days as a Prospect until the Preliminary App Received.</inlineHelpText>
        <label># Days as Prospect until App Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Warm__c</fullName>
        <formula>Warm_Transition_Date__c -  DATEVALUE( CreatedDate )</formula>
        <label># Days as Warm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_App_Approval__c</fullName>
        <description>The number of days from the Preliminary App Received to the Preliminary App Approved.</description>
        <formula>Preliminary_App_Approved__c - Preliminary_App_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days from the Preliminary App Received to the Preliminary App Approved.</inlineHelpText>
        <label># Days for App Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_FINRA_Effective__c</fullName>
        <description>The number of days from creation to the FINRA Effective Date.</description>
        <formula>FINRA_Effective_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days from creation to the FINRA Effective Date.</inlineHelpText>
        <label># Days for FINRA Effective</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Hot_to_Advisor__c</fullName>
        <formula>Advisor_Transition_Date__c - Hot_Transition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days from Hot to Advisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Lead_to_Prospect__c</fullName>
        <description>The number of days from Lead to Prospect.</description>
        <formula>DATEVALUE( Lead_Creation_date__c )  -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days from Lead to Prospect.</inlineHelpText>
        <label># Days from Lead to Prospect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Recruitment_Kit__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Recruitment_Kit__c), Null,IF( NOT(ISNULL(  RecentOppty__r.Preliminary_App_Sent__c )),RecentOppty__r.Preliminary_App_Sent__c-Recruitment_Kit__c,IF(NOT(ISNULL(RecentOppty__r.Closed_Date__c))&amp;&amp; (RecentOppty__r.Closed_Date__c-Recruitment_Kit__c) &gt; 0,Closed_Date__c-Recruitment_Kit__c,(TODAY()-Recruitment_Kit__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Recruitment Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Created__c</fullName>
        <description>The number of days since the contact was Created.</description>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days since the contact was Created.</inlineHelpText>
        <label># Days since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discreet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discreet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit_Modified__c</fullName>
        <label>Do Not Solicit Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Not_Qualify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Not Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Transition_Date__c</fullName>
        <label>Est. Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINRA_Effective_Date__c</fullName>
        <description>FINRA Effective Date</description>
        <label>FINRA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Based_Pct__c</fullName>
        <description>Fee Based %</description>
        <label>Fee Based %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Waivers_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Waivers Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Office__c</fullName>
        <label>Field Office</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>LastName &amp; &quot;, &quot; &amp; FirstName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goes_By__c</fullName>
        <label>Goes By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Notification_of_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Notification of Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Transition_Date__c</fullName>
        <description>The date the contact transitioned to status: Hot.</description>
        <inlineHelpText>The date the contact transitioned to status: Hot.</inlineHelpText>
        <label>Hot Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Income Source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee &amp; Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee, Commission, &amp; Fixed Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Independent_Captive__c</fullName>
        <label>Independent/Captive</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Branch__c</fullName>
        <label>Individual/Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSJ Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiate_Transition_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Transition Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Producing Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_SSN__c</fullName>
        <label>Last 4-Digits SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_By__c</fullName>
        <label>Last Activity By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Creation_date__c</fullName>
        <label>Lead Creation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Sub_Type__c</fullName>
        <label>Lead Source Sub-Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Internal Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Recruiting Visit/Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBD RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN#</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(LeadSource)</formula>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Certifications__c</fullName>
        <label>License &amp; Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>Series 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 8,9,10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 14A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 62</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 66</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Licenses_Section__c</fullName>
        <label>Licenses Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Annuity_Revenue_Source__c</fullName>
        <label>Life &amp; Annuity Revenue Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_GDC__c</fullName>
        <description>Life GDC</description>
        <label>Life GDC $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Premier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Premier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lincoln_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lincoln Product</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>